--- a/app/src/main/res/layout/item_list_message.xml
+++ b/app/src/main/res/layout/item_list_message.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="3dp">
 
     <LinearLayout
@@ -10,24 +10,46 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvItemMesssage"
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:text="Hello Viet Nam" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvItemContact"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:gravity="center_vertical"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="Daxua" />
+
+            <TextView
+                android:id="@+id/tvItemMesssage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="3"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                tools:text="Hello Viet Nam" />
+        </LinearLayout>
 
         <ImageButton
             android:id="@+id/imgBtnSpeak"
             android:layout_width="36dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginEnd="5dp"
             android:layout_marginStart="5dp"
             android:background="@android:color/transparent"
+            android:contentDescription="@null"
             android:src="@drawable/ic_volume_up_black_36dp" />
     </LinearLayout>
 
